k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: mob
  namespace: brimes
spec:
  selector:
    app: mob
  ports:
    - port: 80
      targetPort: 8080
