k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mob
  namespace: brimes
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
spec:
  ingressClassName: traefik
  rules:
    - host: mob.zel.care
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mob
                port:
                  number: 80
